package pos_creditcard;

public interface Change {
  Cash value = null;

  Cash getValue();
}
